Delete old theme. Style new one.

--- a/src/Orchard.Web/Themes/Themes.csproj
+++ b/src/Orchard.Web/Themes/Themes.csproj
@@ -67,11 +67,6 @@
     <Compile Include="Bootstrap_3_1_1_Base\obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Bootstrap_3_1_1_Base\Properties\AssemblyInfo.cs" />
     <Compile Include="Bootstrap_3_1_1_Base\ResourceManifest.cs" />
-    <Compile Include="Bootstrap_3_1_1_SimpleBlog\ListShapeProvider.cs" />
-    <Compile Include="Bootstrap_3_1_1_SimpleBlog\obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
-    <Compile Include="Bootstrap_3_1_1_SimpleBlog\obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
-    <Compile Include="Bootstrap_3_1_1_SimpleBlog\obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
-    <Compile Include="Bootstrap_3_1_1_SimpleBlog\ResourceManifest.cs" />
     <Compile Include="Bootstrap_3_2_0_Base\obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="Bootstrap_3_2_0_Base\obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="Bootstrap_3_2_0_Base\obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -82,7 +77,6 @@
     <Compile Include="Bootstrap_3_2_0_SimpleBlog\obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="Bootstrap_3_2_0_SimpleBlog\obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Bootstrap_3_2_0_SimpleBlog\ResourceManifest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Bootstrap_3_1_1_Base\Bootstrap_3_1_1_Base.csproj" />
@@ -122,19 +116,6 @@
     <Content Include="Bootstrap_3_1_1_KongwaHill\Styles\Site.css" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Theme.png" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Theme.txt" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\bin\System.Web.Mvc.dll" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Bootstrap_3_1_1_SimpleBlog.csproj" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\fonts\fontawesome-webfont.svg" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Readme\ChangeLog.txt" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Readme\Instructions.txt" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Readme\KnownIssues.txt" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Readme\package-theme.txt" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Readme\TODO.txt" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Scripts\APA-Style.js" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Scripts\IE-10.js" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\Site.css" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Theme.png" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Theme.txt" />
     <Content Include="Bootstrap_3_2_0_Base\bin\System.Web.Mvc.dll" />
     <Content Include="Bootstrap_3_2_0_Base\Bootstrap_3_2_0_Base.csproj" />
     <Content Include="Bootstrap_3_2_0_Base\Bootstrap_3_2_0_Base.csproj.user" />
@@ -178,6 +159,7 @@
     <Content Include="Bootstrap_3_3_4_SimpleBlog\Theme.txt" />
     <Content Include="Bootstrap_3_3_4_SimpleBlog\ThemeZonePreview.png" />
     <Content Include="Bootstrap_3_3_4_Base\Styles\base.css" />
+    <Content Include="packaging-commands.txt" />
     <Content Include="TheAdmin\Scripts\admin.js" />
     <Content Include="TheAdmin\Styles\ie.css" />
     <Content Include="TheAdmin\Styles\ie7.css" />
@@ -419,86 +401,6 @@
     <Content Include="Bootstrap_3_1_1_KongwaHill\Views\MenuItem.cshtml" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Views\MenuItemLink.cshtml" />
     <Content Include="Bootstrap_3_1_1_KongwaHill\Web.config" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\fonts\fontawesome-webfont.eot" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\fonts\fontawesome-webfont.woff" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\fonts\FontAwesome.otf" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\packages.config" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Placement.info" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Scripts\Web.config" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bigfont\_apa-style.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bigfont\_ie-10.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bigfont\_print.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bigfont\_responsive-adwords.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\alerts.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\badges.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\bootstrap.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\breadcrumbs.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\button-groups.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\buttons.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\carousel.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\close.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\code.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\component-animations.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\dropdowns.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\forms.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\glyphicons.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\grid.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\input-groups.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\jumbotron.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\labels.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\list-group.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\media.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\mixins.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\modals.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\navbar.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\navs.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\normalize.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\pager.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\pagination.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\panels.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\popovers.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\print.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\progress-bars.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\responsive-utilities.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\scaffolding.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\tables.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\theme.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\thumbnails.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\tooltip.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\type.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\utilities.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\variables.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\bootstrap-3.1.1\wells.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\bordered-pulled.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\core.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\fixed-width.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\font-awesome.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\icons.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\larger.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\list.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\mixins.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\path.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\rotated-flipped.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\spinning.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\stacked.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\font-awesome-4.1.0\variables.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_clearing-float.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_forms.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_general.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_main.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_misc.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_reset.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_secondary.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_structure.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\less\orchard\_typography.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\Site.css.map" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\Site.less" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Styles\Web.config" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Views\BadgeOfHonor.cshtml" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Views\Layout.cshtml" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Views\Parts.TagCloud.cshtml" />
-    <Content Include="Bootstrap_3_1_1_SimpleBlog\Web.config" />
     <Content Include="Bootstrap_3_2_0_Base\Content\Web.config" />
     <Content Include="Bootstrap_3_2_0_Base\obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="Bootstrap_3_2_0_Base\Placement.info" />
@@ -708,10 +610,10 @@
     <Folder Include="Bootstrap_3_1_1_Base\bin\" />
     <Folder Include="Bootstrap_3_1_1_Base\obj\Debug\TempPE\" />
     <Folder Include="Bootstrap_3_1_1_GardenFaire\Views\" />
-    <Folder Include="Bootstrap_3_1_1_SimpleBlog\obj\Debug\TempPE\" />
     <Folder Include="Bootstrap_3_2_0_Base\obj\Debug\TempPE\" />
     <Folder Include="Bootstrap_3_2_0_SimpleBlog\obj\Debug\TempPE\" />
     <Folder Include="Bootstrap_3_3_4_Base\app_components\" />
+    <Folder Include="Properties\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
